[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/m6x11.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/m6x11.ttf"

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 28.9706
margin_top = 20.3937
margin_right = 366.971
margin_bottom = 76.3937
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.505882, 0.654902, 1 )
text = "0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreakLabel" type="Label" parent="."]
visible = false
margin_left = 28.9706
margin_top = 76.3937
margin_right = 125.971
margin_bottom = 108.394
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.505882, 0.654902, 1 )
text = "x 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
visible = false
margin_left = 368.936
margin_top = 20.3937
margin_right = 465.936
margin_bottom = 47.3937
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.505882, 0.654902, 1 )
text = "30s"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
